# scratchpad

./: CMakeLists.txt  README.md  print_utils.c  test_bar.cpp  test_foo.cpp  test_foo_bar_baz.cpp
src/bar/: bar.cpp  bar.h
src/baz/: baz.cpp  baz.h
src/foo/: foo.cpp  foo.h
